infra/k8s/city/service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients
  namespace: city-example-namespace
spec:
  selector:
    app: clients
  ports:
    - name: http
      port: 4001
      targetPort: 4001
      nodePort: 30041
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: couriers
  namespace: city-example-namespace
spec:
  selector:
    app: couriers
  ports:
    - name: http
      port: 4002
      targetPort: 4002
      nodePort: 30042
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: matching
  namespace: city-example-namespace
spec:
  selector:
    app: matching
  ports:
    - name: http
      port: 4003
      targetPort: 4003
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: city-example-namespace
spec:
  selector:
    app: orders
  ports:
    - name: http
      port: 4004
      targetPort: 4004
      nodePort: 30044
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: restaurants
  namespace: city-example-namespace
spec:
  selector:
    app: restaurants
  ports:
    - name: http
      port: 4005
      targetPort: 4005
      nodePort: 30045
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: region
  namespace: city-example-namespace
spec:
  selector:
    app: region
  ports:
    - name: http
      port: 4006
      targetPort: 4006
      nodePort: 30046
  type: NodePort
