infra/k8s/city/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients
  namespace: city-example-namespace
spec:
  selector:
    app: clients
  ports:
    - name: http
      port: 4001
      targetPort: 4001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: couriers
  namespace: city-example-namespace
spec:
  selector:
    app: couriers
  ports:
    - name: http
      port: 4002
      targetPort: 4002
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: matching
  namespace: city-example-namespace
spec:
  selector:
    app: matching
  ports:
    - name: http
      port: 4003
      targetPort: 4003
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: city-example-namespace
spec:
  selector:
    app: orders
  ports:
    - name: http
      port: 4004
      targetPort: 4004
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: restaurants
  namespace: city-example-namespace
spec:
  selector:
    app: restaurants
  ports:
    - name: http
      port: 4005
      targetPort: 4005
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: region
  namespace: city-example-namespace
spec:
  selector:
    app: region
  ports:
    - name: http
      port: 4006
      targetPort: 4006
  type: ClusterIP
